--- a/Utilities/config.json
+++ b/Utilities/config.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://testprod.healthplix.com/",
+  "url": "https://testprod2.healthplix.com/",
   "email": "pratyasha.prachi@gmail.com",
   "password": "hplx1234"
 }
